crates/tui/snapshots/fullscreen/session_manager/session_manager_idle_expanded.snap
---
source: crates/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                                    [Dashboard]

─ Dashboard ───────────────────────────────────────────────────────────────────── Group: Status  g ─

    Sessions                           Status           Updated   │ Session details
> Idle (1) -                                                      │
  ○ Snapshot session                   idle                       │   Idle (1)
                                                                  │
  Archived (0)                                                    │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │

  Enter/← to collapse · g to group · Esc to return
