crates/tui/snapshots/fullscreen/session_manager/session_manager_preview_loading.snap
---
source: crates/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                                    [Dashboard]




























Loading conversation…
  Preview · Snapshot session · read only
  Esc to close
